--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,14 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>3.4.0</version>
+                <configuration>
+                    <configLocation>checks.xml</configLocation>
+                </configuration>
+            </plugin>
         </plugins>
         <resources>
             <resource>
