Changed name from Poll to PollMaster

--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.shweit</groupId>
-    <artifactId>Poll</artifactId>
+    <artifactId>PollMaster</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
 
-    <name>Poll</name>
+    <name>PollMaster</name>
 
     <properties>
         <java.version>21</java.version>
