Added auto Modrinth Release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,3 +31,20 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Modrinth Publish
+        uses: Kir-Antipov/mc-publish@v3.3
+        with:
+          modrinth-id: 'BW18aGA0'
+          modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
+          modrinth-featured: true
+          files: |
+            target/PollMaster-${{ github.event.release.tag_name }}.jar
+          loaders: |
+            spigot
+            paper
+            bukkit
+          game-versions: |
+            >=1.9 <=1.21.1
+          game-version-filter: 'releases'
+          java: 21
+
